fix: remove unessecary z-index

--- a/client/src/pages/home-page/_home-page.scss
+++ b/client/src/pages/home-page/_home-page.scss
@@ -7,7 +7,7 @@
   }
 
   .col-md-10 {
-    z-index: 2;
+    z-index: 1;
   }
 
   .container-fluid {
@@ -15,30 +15,18 @@
   }
   &__heading {
     margin-bottom: 30px;
-    z-index: 5;
   }
   &__text {
     margin-bottom: 15px;
-    z-index: 5;
   }
   &__list {
     margin: 20px 0 45px;
-    z-index: 5;
   }
   &__btn {
     margin-bottom: 50px;
-    z-index: 5;
-  }
-
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
   }
 
   .tsparticles-canvas-el {
-    z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
